# job-etl

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest_output.txt
.github/workflows/: ci-results.yml  ci-status-reporter.yml  ci.yml
airflow/: Dockerfile  requirements.txt
airflow/dags/: example_dag.py  jobs_etl_daily.py
config/: ranking.yml  sources.yml
config/taxonomy/: skills_dictionary.yml
dbt/job_dbt/: .gitignore  README.md  dbt_project.yml  packages.yml  profiles.yml.example  test_dbt_setup.sh
dbt/job_dbt/macros/: .gitkeep  generate_schema_name.sql  normalize_whitespace.sql
dbt/job_dbt/models/int/: .gitkeep
dbt/job_dbt/models/marts/: .gitkeep  dim_companies.sql  fact_jobs.sql  schema.yml
dbt/job_dbt/models/raw/: .gitkeep  sources.yml
dbt/job_dbt/models/staging/: .gitkeep  schema.yml  sources.yml  stg_job_postings.sql
dbt/job_dbt/seeds/: .gitkeep  company_size.csv  contract_type.csv  remote_type.csv
docs/: FIX_AIRFLOW_CONTAINERS.md  Glassdoor_Data_ API_Documentation.md  MVP_TESTING_GUIDE.md  SECURITY_INCIDENT_REMEDIATION.md  SETUP_EMAIL.md  TODO.md  TROUBLESHOOTING.md  integration-tests-status.md  specification.md  testing-setup.md
docs/architecture/: c4-diagrams.md  job-etl-flow.drawio
docs/commands/: code_review.md  describe__steps.md
docs/features/: DBT_SKELETON_REVIEW.md  STEP3_COMPLETION_SUMMARY.md  STEP3_FINAL_CHECKLIST.md  STEP3_FIXES_APPLIED.md  STEP3_REVIEW.md
scripts/: backfill_rankings.py  backfill_seniority_levels.py  bootstrap_db.sql  fix_airflow_connection.sh  generate_airflow_keys.py  lint.ps1  lint.sh  migrate_add_companies_stg.sql  migrate_add_seniority_level.sql  prepare_env.sh  query_postgres.ps1  query_postgres.sh
services/: __init__.py
services/common/: __init__.py  seniority_extractor.py
services/enricher/: README.md  __init__.py  company_matcher.py  db_operations.py  glassdoor_client.py  main.py  requirements.txt  skills_extractor.py
services/normalizer/: README.md  __init__.py  db_operations.py  hash_generator.py  main.py  normalize.py  requirements.txt  seniority_extractor.py
services/notifier/: Dockerfile  README.md  __init__.py  base.py  email.py  main.py
services/publisher_hyper/: README.md  __init__.py  exporter.py  main.py
services/ranker/: README.md  __init__.py  config_loader.py  db_operations.py  main.py  requirements.txt  scoring.py
services/source-extractor/: README.md  base.py  requirements.txt
services/source-extractor/adapters/: __init__.py  mock_adapter.py
services/source_extractor/: README.md  __init__.py  base.py  db_storage.py  requirements.txt  retry.py  source_config.py
services/source_extractor/adapters/: __init__.py  jsearch_adapter.py  jsearch_api_documentation.md  mock_adapter.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_example_integration.py  test_jsearch_integration.py  test_normalizer_integration.py
tests/unit/: __init__.py  test_example.py  test_jsearch_adapter.py  test_normalizer.py  test_retry_logic.py  test_source_adapter.py
tests/unit/services/: test_notifier_email.py
tests/unit/services/enricher/: __init__.py  test_company_matcher.py  test_glassdoor_client.py  test_main.py  test_skills_extractor.py
tests/unit/services/ranker/: test_main_dry_run.py  test_scoring.py
