[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "job-etl"
version = "0.1.0"
description = "Incremental, Microservice-Based ETL for Job Postings"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Job-ETL Team"}
]

[tool.ruff]
# Target Python 3.9+ as per project requirements
target-version = "py39"

# Line length matches Black's default and is reasonable for modern screens
line-length = 100

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    "build",
    "dist",
    "airflow/logs",
    "dbt/job_dbt/target",
    "dbt/job_dbt/dbt_packages",
    "artifacts",
]

[tool.ruff.lint]
# Enable rule sets - keeping critical and important ones only
# F = pyflakes (basic Python errors) - CRITICAL
# E = pycodestyle errors - CRITICAL
# W = pycodestyle warnings - Important
# I = isort (import sorting) - Important for code organization
# N = pep8-naming - Important for consistency
# UP = pyupgrade (modern Python syntax) - Helps with Python version compatibility
# B = flake8-bugbear (common bugs) - Catches real issues
# DTZ = flake8-datetimez (timezone-aware datetimes) - Catches timezone bugs
# 
# Disabled for MVP (too strict for learning project):
# C4 = flake8-comprehensions (better list/dict comprehensions)
# T20 = flake8-print (catch leftover print statements)
# SIM = flake8-simplify (code simplification)
select = ["E", "W", "F", "I", "N", "UP", "B", "DTZ"]

# Ignore specific rules that might be too strict for a learning project
ignore = [
    "E501",    # Line too long (handled by formatter)
    "N812",    # Lowercase imported as non-lowercase (common with pandas as pd)
    "UP006",   # Use X instead of Y for typing (too opinionated for learning)
    "UP007",   # Use X | Y instead of Union[X, Y] (Python 3.10+ syntax)
    "UP045",   # Use X | None instead of Optional[X] (Python 3.10+ syntax, project supports 3.9+)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Test files can use assert statements and import fixtures
"tests/**/*.py" = ["B011", "I001"]
# Airflow DAGs can have longer lines and complex import patterns
# F401 = imported but unused (Airflow modules are needed for DAG registration)
"airflow/dags/*.py" = ["E501", "I001", "F401"]

[tool.ruff.lint.isort]
# Organize imports into sections
known-first-party = ["services", "tests"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
# Use double quotes for strings (Python community standard)
quote-style = "double"
# Indent with 4 spaces (PEP 8 standard)
indent-style = "space"
# Use Unix-style line endings
line-ending = "lf"

[tool.pytest.ini_options]
# Pytest configuration
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",                    # Show summary of all test outcomes
    "--strict-markers",       # Raise error on unknown markers
    "--strict-config",        # Raise error on invalid config
    "--cov=services",         # Coverage for services directory
    "--cov-report=term-missing", # Show missing lines in coverage report
    "--cov-report=html",      # Generate HTML coverage report
    "--cov-report=xml",       # Generate XML coverage report for CI
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
# Coverage.py configuration
source = ["services"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
# Fail if coverage is below 80% (as per project requirements)
# TODO: Re-enable once database-dependent services have integration tests
# fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    
    "if TYPE_CHECKING:",
]

